<resources>
    <!--Base app strings-->
    <string name="app_name">PET Report</string>
    <string name="action_settings">Settings</string>

    <!--Reports Screen strings-->
    <string name="reports_title">Relatórios</string>
    <string name="reports_add_input">Adicionar</string>
    <string name="reports_add_message">Adicionar novo relatório</string>
    <string name="reports_add_hint">Relatório parcial 2022/1</string>

    <!--Actions Reports Screen strings-->
    <string name="actions_card_title">Atividade</string>
    <string name="back_button_title">Voltar</string>
    <string name="share_report_button_title">Gerar Relatório</string>
    <string name="title_action_hint">Nome</string>
    <string name="hours_action_hint">Carga Horária</string>
    <string name="initial_date_description">Data Inicial:</string>
    <string name="final_date_description">Data Final:</string>
    <string name="description_hint">Descrição/Justificativa</string>
    <string name="goals_hint">Objetivos</string>
    <string name="methodology_hint">Como a atividade será realizada? (Metodologia)</string>
    <string name="results_hint">Resultados/Produtos esperados com a atividade</string>
    <string name="evaluation_methodology_hint">Metodologia de avaliação da atividade pelo grupo</string>
    <string name="evaluation_complete_default">Plenamente Desenvolvido</string>
    <string name="evaluation_action_hint">Relate os aspectos/Avaliação Atividade</string>
    <string name="add_action_input">Adicionar Atividade</string>

    <!--Add Action Screen strings-->
    <string name="new_action_title">Nova Atividade</string>
    <string name="dd_mm_yyyy_date_formatter">"%02d/%02d/%04d"</string>
    <string-array name="options_evaluated">
        <item>Plenamente Desenvolvido</item>
        <item>Parcialmente Desenvolvido</item>
        <item>Não Desenvolvido</item>
    </string-array>

    <!--Utils strings-->
    <string name="delete_recycler_input">Deletar</string>
    <string name="select_items_delete_size_label">%d</string>
    <string name="question_delete_exam_label">Tem certeza que deseja deletar os relatórios selecionados?</string>
    <string name="dialog_positive">Sim</string>
    <string name="dialog_negative">Não</string>
    <string name="name_input_dialog">Nome</string>

    <!--Info messages strings-->
    <string name="empty_reports_message">Nenhum relatório encontrado</string>
    <string name="support_title">Suporte</string>
    <string name="terms_title">Termos de uso</string>

</resources>