<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_margin_guideLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_margin_guideLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <TextView
            android:id="@+id/add_report_textView"
            android:layout_width="400dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/reports_add_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/end_margin_guideLine"
            app:layout_constraintStart_toStartOf="@id/start_margin_guideLine"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signature_code_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:hint="@string/name_input_dialog"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="@id/end_margin_guideLine"
            app:layout_constraintStart_toStartOf="@id/start_margin_guideLine"
            app:layout_constraintTop_toBottomOf="@id/add_report_textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signature_code_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_report_button"
            style="@style/buttonWithBorder"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserratregular"
            android:text="@string/reports_add_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/end_margin_guideLine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/start_margin_guideLine"
            app:layout_constraintTop_toBottomOf="@+id/signature_code_textInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>